# pyqrlew

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  ci.yml
.tools-cfg/: mypy.ini
demo/: demo.ipynb
demo/retail_data/: generate_json.py  install_db.sql  install_db_on_docker.sh  schema.json  size.json
docs/: api.md  compilation_rules.md  conf.py  contributing.md  core.md  index.md  index.rst  io.md  postgres_supported_expressions.md  requirements.txt
docs/api/: pyqrlew.dataset.rst  pyqrlew.io.dataset.rst  pyqrlew.io.postgresql.rst  pyqrlew.io.rst  pyqrlew.io.sqlite.rst  pyqrlew.io.utils.rst  pyqrlew.pyqrlew.rst  pyqrlew.rst  pyqrlew.tester.rst  pyqrlew.tester.stochatic_dataset.rst  pyqrlew.tester.tester.rst  pyqrlew.tester.utils.rst  pyqrlew.utils.rst
docs/examples/: dataset_from_queries.ipynb  mssql_translator.ipynb  postgres_simple_table.ipynb  range_propagation.ipynb  rewrite_with_dp.ipynb
examples/: PyQrlew.ipynb  Sarus SQL.ipynb  benchmarck.py  benchmark.py  dataset_from_queries.ipynb  deprecated_demo.ipynb  dp_compilation.ipynb  expose_protobufs.py  io.py  minimal.ipynb  mssql_translator.ipynb  my_sqlite.db  postgres_simple_table.ipynb  pyqrlew_display_relations.ipynb  pyqrlew_retail_demo.ipynb  range_propagation.ipynb  requirements.txt  rewrite_with_dp.ipynb  simple.py  test_queries.ipynb
examples/demo/retail_data/: dataset.json  install_db.sql
python/pyqrlew/: __init__.py  pyqrlew.pyi  relation_with_dp_event.py  stochatic_dataset.py  type_aliases.py  typing.py  utils.py  wrappers.py
python/pyqrlew/data/relational_data_repo/financial/: load.py
python/pyqrlew/data/retail_demo/: dataset.json  schema.json  size.json
python/pyqrlew/io/: __init__.py  database.py  dataset.py  postgresql.py  sqlite.py  utils.py
python/pyqrlew/tester/: __init__.py  stochatic_dataset.py  tester.py  utils.py
src/: dataset.rs  dialect.rs  dp_event.rs  error.rs  lib.rs  relation.rs  utils.rs
tests/: conftest.py  requirements.txt  test_base_queries.py  test_dataset.py  test_differential_privacy.py  test_errors.py  test_extract_dataset.py  test_financial_dataset.py  test_relation.py  test_results.py  test_sarus_sql_queries.py  test_utils.py  utils.py
tests/queries/: base_queries.sql  dp_queries.sql  dp_sarus_sql_queries.sql  sarus_sql_queries.sql  sql_unlimited_queries.sql  test_queries.sql  valid_queries.sql
tests/ressources/: bounds.json  dataset.json  generate_mocks.py  names.py  schema.json  size.json
tests/ressources/install_db/: extract_beacon.csv  extract_census.csv  install_postgres.sql
