[package]
name = "pyqrlew"
version = "0.9.21"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyqrlew"
crate-type = ["cdylib"]

[profile.dev]
debug = true
overflow-checks = true

[profile.release]
debug = true
overflow-checks = true

[dependencies]
backtrace = "0.3"
pyo3 = { version = "0.21", features = ["abi3-py38", "gil-refs"] }
qrlew = "=0.9.20"
qrlew-sarus = "=0.9.19"
serde_json = "1.0"
