[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyqrlew"
description = "A library to manipulate SQL queries, designed with privacy application in mind."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Nicolas Grislain", email = "ng@sarus.tech" }]
keywords = [
  "SQL",
  "Privecy",
  "Differential Privacy",
  "AST",
  "Intermediate Representation",
  "Rust",
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "SQLAlchemy < 2.0",
  "psycopg2 < 3.0",
  "pymysql ~= 1.0",
  "qrlew-datasets ~= 0.5",
  "pandas ~= 1.0",
  "importlib_resources < 6.0",
]

[project.optional-dependencies]
test = [
  "pytest ~= 7.0",
  "mypy ~= 1.0",
]

[project.urls]
homepage = "https://qrlew.github.io"
documentation = "https://pyqrlew.readthedocs.io"
repository = "https://github.com/Qrlew/pyqrlew"
changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
